--- a/PiesOla/Views/Home/Index.cshtml
+++ b/PiesOla/Views/Home/Index.cshtml
@@ -1,8 +1,108 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+  <style>
+    #caja{ 
+         
+          color: black;
+          padding: 8px;
+   
+          }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+  </style>
+
+<body style="background: #84FF6B;">
+  <div class="carrusel">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="~/img/banner1.jpg" alt="First slide" width="500" height="500">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="~/img/banner2.jpg" alt="Second slide"width="500" height="500">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="~/img/banner3.gif" alt="Third slide"width="500" height="500">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+
+
+<div style="background: #84FF6B;">
+  <div style="background: #84FF6B;" class="card text-center" >
+  <div style="background: #84FF6B;" class="card-header" >
+  </div>
+  <div class="card-body" style="background: #AB72FC;">
+    <h5 class="card-title"><h2 style="-webkit-text-stroke: 2px  black;color: #FCFF30; text-align: center;  font-size: 50px;"> ¡Separa tus Calcetines personalisados! </h2></h5>
+    <p class="card-text"><b>Tus medias tejidas favoritas</b>
+    </p>
+  </div>
+  <div class="card-footer text-muted">
+  </div>
 </div>
+
+<main>
+<div style="background: #84FF6B;" class="row row-cols-1 row-cols-md-3 g-4">
+  <div class="col">
+    <div class="card">
+      <img src="~/img/foto1.jpg" class="card-img-top" alt="...">
+      <div class="card-body"style="background: #FCFF30;">
+        <h5 class="card-title" style="text-align: center; color: #000000;"><a href="#">Taloneras</a></h5>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="~/img/foto2.jpg" class="card-img-top" alt="...">
+      <div class="card-body" style="background: #FCFF30;">
+        <h5 class="card-text" style="text-align: center; color:" ><a href="#">Tobilleras</a></h5>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="~/img/foto3.jpg" class="card-img-top" alt="...">
+      <div class="card-body" style="background: #FCFF30;">
+        <h5 class="card-title" style="text-align: center;"><a  href="#">Largas</a></h5>
+      </div>
+    </div>
+  </div>
+</div>
+ 
+</main>
+
+<div style="background: #84FF6B;" class="card text-center" >
+  <div class="card-header" >
+  </div>
+  <div class="card-body" style="background: #AB72FC;">
+    <h5 class="card-title"><h2 style="-webkit-text-stroke: 2px  
+    black;color: #FCFF30; text-align: center;  font-size: 50px;"> Producto más vendido </h2></h5>
+    
+  </div>
+  <div class="card-footer text-muted">
+  </div>
+</div>
+
+<div style="background: #84FF6B;" class="row g-0 bg-light position-relative">
+  <div style="background: #84FF6B;" class="col-md-6 mb-md-0 p-md-4">
+    <img src="~/img/vendido.jpg" class="w-100" alt="...">
+  </div>
+  <div style="background: #84FF6B;" class="col-md-6 p-4 ps-md-0" >
+    <h5 class="mt-0 text-centerstyle="margin-top: 30%;" ></h5>
+    <p style="margin-top: 20%;"><b>CONTAMOS CON LA MEJOR CALIDAD PARA TUS CALCETINES</b>
+      
+    </p>
+    
+  </div>
+</div>
+</div>
+</body>
