--- a/PiesOla/Areas/Identity/Pages/Account/Login.cshtml
+++ b/PiesOla/Areas/Identity/Pages/Account/Login.cshtml
@@ -7,19 +7,19 @@
 
 <h1>@ViewData["Title"]</h1>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <section>
             <form id="account" method="post">
                 <h4>Use a local account to log in.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Input.Email"></label>
+                    <label asp-for="Input.Email">Correo</label>
                     <input asp-for="Input.Email" class="form-control" />
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Input.Password"></label>
+                    <label asp-for="Input.Password">Contraseña</label>
                     <input asp-for="Input.Password" class="form-control" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
@@ -48,6 +48,7 @@
             </form>
         </section>
     </div>
+    <!--
     <div class="col-md-6 col-md-offset-2">
         <section>
             <h4>Use another service to log in.</h4>
@@ -78,6 +79,7 @@
             }
         </section>
     </div>
+      -->
 </div>
 
 @section Scripts {
