--- a/PiesOla/Areas/Identity/Pages/Account/Login.cshtml
+++ b/PiesOla/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,8 +1,10 @@
 @page
 @model LoginModel
+<body style="background: #58d410;  text-align: center;">
+    
 
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = "Iniciar Sesión";
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -10,7 +12,7 @@
     <div class="col-md-12">
         <section>
             <form id="account" method="post">
-                <h4>Use a local account to log in.</h4>
+             
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
@@ -85,3 +87,4 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+</body>
