--- a/PiesOla/Views/Home/Index.cshtml
+++ b/PiesOla/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 
   </style>
 
-<body style="background: #84FF6B;">
+<body style="background: #5DFFF2;">
   <div class="carrusel">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
@@ -37,7 +37,7 @@
   </div>
 
 
-<div style="background: #84FF6B;">
+<div style="background: #5DFFF2;">
   <div style="background: #84FF6B;" class="card text-center" >
   <div style="background: #84FF6B;" class="card-header" >
   </div>
@@ -51,10 +51,10 @@
 </div>
 
 <main>
-<div style="background: #84FF6B;" class="row row-cols-1 row-cols-md-3 g-4">
+<div style="background: #5DFFF2;" class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card">
-      <img src="~/img/foto1.jpg" class="card-img-top" alt="...">
+      <img src="~/img/foto1.jpg" class="card-img-top" alt="media-talo">
       <div class="card-body"style="background: #FCFF30;">
         <h5 class="card-title" style="text-align: center; color: #000000;"><a href="#">Taloneras</a></h5>
       </div>
@@ -62,7 +62,7 @@
   </div>
   <div class="col">
     <div class="card">
-      <img src="~/img/foto2.jpg" class="card-img-top" alt="...">
+      <img src="~/img/foto2.jpg" class="card-img-top" alt="media-tobi">
       <div class="card-body" style="background: #FCFF30;">
         <h5 class="card-text" style="text-align: center; color:" ><a href="#">Tobilleras</a></h5>
       </div>
@@ -70,7 +70,7 @@
   </div>
   <div class="col">
     <div class="card">
-      <img src="~/img/foto3.jpg" class="card-img-top" alt="...">
+      <img src="~/img/foto3.jpg" class="card-img-top" alt="media-larga">
       <div class="card-body" style="background: #FCFF30;">
         <h5 class="card-title" style="text-align: center;"><a  href="#">Largas</a></h5>
       </div>
@@ -80,7 +80,7 @@
  
 </main>
 
-<div style="background: #84FF6B;" class="card text-center" >
+<div style="background: #5DFFF2;" class="card text-center" >
   <div class="card-header" >
   </div>
   <div class="card-body" style="background: #AB72FC;">
@@ -92,7 +92,7 @@
   </div>
 </div>
 
-<div style="background: #84FF6B;" class="row g-0 bg-light position-relative">
+<div style="background: #5DFFF2;" class="row g-0 bg-light position-relative">
   <div style="background: #84FF6B;" class="col-md-6 mb-md-0 p-md-4">
     <img src="~/img/vendido.jpg" class="w-100" alt="...">
   </div>
