--- a/PiesOla/Views/Home/Index.cshtml
+++ b/PiesOla/Views/Home/Index.cshtml
@@ -56,7 +56,7 @@
     <div class="card">
       <img src="~/img/foto1.jpg" class="card-img-top" alt="...">
       <div class="card-body"style="background: #FCFF30;">
-        <h5 class="card-title" style="text-align: center; color: #000000;"><a href="#">Taloneras</a></h5>
+        <h5 class="card-title" style="text-align: center; color: #000000;"><a href="#">Medias Taloneras</a></h5>
       </div>
     </div>
   </div>
@@ -64,7 +64,7 @@
     <div class="card">
       <img src="~/img/foto2.jpg" class="card-img-top" alt="...">
       <div class="card-body" style="background: #FCFF30;">
-        <h5 class="card-text" style="text-align: center; color:" ><a href="#">Tobilleras</a></h5>
+        <h5 class="card-text" style="text-align: center; color:" ><a href="#">Medias Tobilleras</a></h5>
       </div>
     </div>
   </div>
@@ -72,7 +72,7 @@
     <div class="card">
       <img src="~/img/foto3.jpg" class="card-img-top" alt="...">
       <div class="card-body" style="background: #FCFF30;">
-        <h5 class="card-title" style="text-align: center;"><a  href="#">Largas</a></h5>
+        <h5 class="card-title" style="text-align: center;"><a  href="#">Medias sLargas</a></h5>
       </div>
     </div>
   </div>
@@ -85,7 +85,7 @@
   </div>
   <div class="card-body" style="background: #AB72FC;">
     <h5 class="card-title"><h2 style="-webkit-text-stroke: 2px  
-    black;color: #FCFF30; text-align: center;  font-size: 50px;"> Producto más vendido </h2></h5>
+    black;color: #FCFF30; text-align: center;  font-size: 50px;"> El Producto más vendido del mes: </h2></h5>
     
   </div>
   <div class="card-footer text-muted">
@@ -98,7 +98,7 @@
   </div>
   <div style="background: #84FF6B;" class="col-md-6 p-4 ps-md-0" >
     <h5 class="mt-0 text-centerstyle="margin-top: 30%;" ></h5>
-    <p style="margin-top: 20%;"><b>CONTAMOS CON LA MEJOR CALIDAD PARA TUS CALCETINES</b>
+    <p style="margin-top: 20%;"><b>CONTAMOS CON LA MEJOR CALIDAD PARA SER TUS CALCETINES FAVORITOS</b>
       
     </p>
     
