--- a/PiesOla/Views/Contactanos/Create.cshtml
+++ b/PiesOla/Views/Contactanos/Create.cshtml
@@ -6,10 +6,10 @@
 
 <link rel="stylesheet" href="~/css/estilos.css" />
 
-<body >
-<div class="row">
+<body style="background-color: #7F8C8D ;">
+<div class="row"    >
   
-   <h1 style="text-align: center;">Envianos Un Mensaje :)</h1>
+   <h1 style="text-align: center;">Envianos Un Mensaje</h1>
   </div>
 <div class="row" >
   <div class="col-md-6">
@@ -45,6 +45,6 @@
 </div>
 </body>
 
-<div class="alert alert-success" role="alert">
+<div class="alert alert-success" role="alert" >
     <h1>@ViewData["Message"]</h1>
 </div>
