--- a/PiesOla/Views/Home/Index.cshtml
+++ b/PiesOla/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 
   </style>
 
-<body style="background: #5DFFF2;">
+<body style="background: #7F8C8D ;">
   <div class="carrusel">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
@@ -37,7 +37,7 @@
   </div>
 
 
-<div style="background: #5DFFF2;">
+<div style="background: #7F8C8D ;">
   <div style="background: #84FF6B;" class="card text-center" >
   <div style="background: #84FF6B;" class="card-header" >
   </div>
@@ -51,7 +51,7 @@
 </div>
 
 <main>
-<div style="background: #5DFFF2;" class="row row-cols-1 row-cols-md-3 g-4">
+<div style="background: #7F8C8D ;" class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card">
       <img src="~/img/foto1.jpg" class="card-img-top" alt="media-talo">
@@ -80,7 +80,7 @@
  
 </main>
 
-<div style="background: #5DFFF2;" class="card text-center" >
+<div style="background: #7F8C8D;" class="card text-center" >
   <div class="card-header" >
   </div>
   <div class="card-body" style="background: #AB72FC;">
