--- a/PiesOla/Views/Contactanos/Index.cshtml
+++ b/PiesOla/Views/Contactanos/Index.cshtml
@@ -1,6 +1,6 @@
 @model IEnumerable<PiesOla.Models.Contactanos>
 
-<h2>Lista de Usuarios registrados en Contactanos</h2>
+<h2>Lista de Usuarios registrados en Contáctanos</h2>
 
 <p>
     <a asp-action="Create">Crear</a>
