--- a/PiesOla/Views/Shared/_MenuPartial.cshtml
+++ b/PiesOla/Views/Shared/_MenuPartial.cshtml
@@ -12,12 +12,12 @@
         </li> 
 
         <li class="nav-item center">
-                            <a class="nav-link text-dark" class="center" asp-controller="Contactanos" asp-action="Index">Contactenos</a>
+                            <a class="nav-link text-dark" class="center" asp-controller="Contactanos" asp-action="Index">Contáctenos</a>
                         </li> 
     }else{
       
            <li class="nav-item center">
-              <a class="nav-link text-dark" class="center" asp-controller="Catalogo" asp-action="Index">Catalogo</a>
+              <a class="nav-link text-dark" class="center" asp-controller="Catalogo" asp-action="Index">Catálogo</a>
               </li> 
 
         <li class="nav-item">
