--- a/PiesOla/Views/Contactanos/Create.cshtml
+++ b/PiesOla/Views/Contactanos/Create.cshtml
@@ -41,7 +41,7 @@
   </div>
 
 <div class="col-md-6" style="width: 100%;">
-  <img src="~/Img/rojas.jpg" alt="">
+  <img src="~/img/rojas.jpg" alt="">
 </div>
 </body>
 
