--- a/PiesOla/Views/Producto/Listar.cshtml
+++ b/PiesOla/Views/Producto/Listar.cshtml
@@ -105,7 +105,7 @@
 
             Swal.fire(
                 'Editado correctamente',
-                'El Prenda se ha editado correctamente',
+                'La Prenda se ha editado correctamente',
                 'success'
             )
         }
