--- a/PiesOla/Views/Proforma/Delete.cshtml
+++ b/PiesOla/Views/Proforma/Delete.cshtml
@@ -10,7 +10,7 @@
   </div>
   <div class="card-body" style="background: #A2D2FF ;">
     <h5 class="card-title"><h2 style="-webkit-text-stroke: 2px  black;color: #FDFEFE; text-align: center;  font-size: 50px;"> Carrito </h2></h5>
-    <h1 style="  black;color: #A2D2FF; text-align: center;  font-size: 20px;">Are you sure you want to delete this?</h1>
+    <h1 style="  black;color: #A2D2FF; text-align: center;  font-size: 20px;">¿Estás seguro de que quieres eliminar esto?</h1>
     <p class="card-text">
     </p>
   </div>
@@ -44,6 +44,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Borrar" class="btn btn-light" style="width: 15%;background: #A2D2FF; color:#FFFFFF" /> 
-        <a asp-action="Index" class="btn btn-light" style="width: 15%;background: #A2D2FF; color:#FFFFFF">Regresar a Lista</a>
+        <a asp-action="Index" class="btn btn-light" style="width: 15%;background: #A2D2FF; color:#FFFFFF">Regresar a la Lista</a>
     </form>
 </div>
