--- a/PiesOla/Views/Home/Index.cshtml
+++ b/PiesOla/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
   <style>
+    
     #caja{ 
          
           color: black;
@@ -11,7 +12,8 @@
 
   </style>
 
-<body style="background: #7F8C8D ;">
+<body style="background-image:url(/img/fondop4.jpg); background-size: cover;
+  ">
   <div class="carrusel">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
