--- a/PiesOla/Areas/Identity/Pages/Account/Login.cshtml
+++ b/PiesOla/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,6 +1,9 @@
 @page
 @model LoginModel
-<body style="background: #58d410;  text-align: center;">
+<body style="background-image:url(/img/fondop2.jpg); background-size: cover;
+  background-repeat: no-repeat;
+  margin: 0;
+  height: 100vh; text-align: center;">
     
 
 @{
@@ -34,17 +37,17 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Log in</button>
+                    <button type="submit" class="btn btn-primary">Ingresar</button>
                 </div>
                 <div class="form-group">
                     <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                        <a id="forgot-password" asp-page="./ForgotPassword">¿Olvidaste tu contraseña?</a>
                     </p>
                     <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">registrar como usuario nuevo</a>
                     </p>
                     <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
+                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Reenviar confirmación por correo electrónico </a>
                     </p>
                 </div>
             </form>
