--- a/PiesOla/Views/Catalogo/Index.cshtml
+++ b/PiesOla/Views/Catalogo/Index.cshtml
@@ -2,8 +2,11 @@
 @{
     ViewData["Title"] = "Catalogo";
 }
-
-<section id="catalogue" class="catalogue section-bg">
+<body style="background-image:url(/img/fondop3.jpg); background-size: cover;
+  background-repeat: no-repeat;
+  margin: 0;
+  height: 100vh;"> 
+<section id="catalogue" class="catalogue section-bg" >
       <div class="container">
 
         <div class="section-title">
@@ -41,4 +44,5 @@
 
 
     </section>
+	</body>
 
