--- a/PiesOla/Views/Shared/_MenuPartial.cshtml
+++ b/PiesOla/Views/Shared/_MenuPartial.cshtml
@@ -25,7 +25,7 @@
           </li>
 
         <li class="nav-item center">
-                            <a class="nav-link text-dark" class="center" asp-controller="Contactanos" asp-action="Create">Contactenos</a>
+                            <a class="nav-link text-dark" class="center" asp-controller="Contactanos" asp-action="Create">Contáctenos</a>
                         </li>
         
         <li class="nav-item center">
