--- a/PiesOla/Views/Nosotros/Index.cshtml
+++ b/PiesOla/Views/Nosotros/Index.cshtml
@@ -3,42 +3,21 @@
 }
  
    
- <body style="background-image:url(/img/fondop4.jpg); background-size: cover;
-  background-repeat: no-repeat;
+ <body style="background:white; 
   margin: 0;
   height: 100vh;">
 <div class="text-center" >
    
 <div class="card text-center" >
-  <div class="card-header" >
-  </div>
+  
   <div class="card-body" style="background: #38D4F3 ;">
-    <h5 class="card-title"><h2 style="-webkit-text-stroke: 2px  black;color: #FDFEFE; text-align: center;  font-size: 50px;"> Nosotros </h2></h5>
-    <p class="card-text">
-    </p>
-  </div>
-  <div class="card-footer text-muted">
-  </div>
+    <h5 class="card-title"><h2 style="-webkit-text-stroke: 1px  black;color: #FDFEFE; text-align: center;  font-size: 30px;"> Nosotros </h2></h5>
+    
 </div>
 
-<main>
-<div class="row row-cols-1 row-cols-md-3 g-4">
-  <div class="col">
-   
-    </div>
-  </div>
-  <div class="col">
-   
-  </div>
-  <div class="col">
-    <div class="card">
-     </div>
-  </div>
-</div>
- </main>
 
 <div class="card text-center" >
-  <div class="card-header" >
+  <div class="card-header" style="background:white;" >
   </div>
     <div class="card-body" style="background: #38D4F3 ;">
     <h5 class="card-title"> Bienvenido a PiesOla <h2 style="-webkit-text-stroke: 2px  
@@ -70,14 +49,14 @@ Asimismo, como nos encanta darle color y diversión a las medias creamos la opci
      ¡Bienvenido a PiesOla!</h2>
 
     </p>
+    
     <a href="#" class="stretched-link " style="margin-left: 50%;"><span style="text-align: center; margin-top: 20%;"></span> </a>
   </div>
 </div>
-<<<<<<< HEAD
+
 </div>
-=======
+
 </div>
 
 
->>>>>>> a13f68ba5891bcf30654fb12038a656680440b83
  </body>
