--- a/PiesOla/Views/Home/Index.cshtml
+++ b/PiesOla/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
 
   </style>
 
-<body style="background-image:url(/img/fondop4.jpg); background-size: cover;
+<body style="background:#F7C2F2; background-size: cover;
   ">
   <div class="carrusel">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -39,9 +39,9 @@
   </div>
 
 
-<div style="background: #7F8C8D ;">
-  <div style="background: #84FF6B;" class="card text-center" >
-  <div style="background: #84FF6B;" class="card-header" >
+<div style="background: #F7C2F2;">
+  <div style="background: #F7C2F2;" class="card text-center" >
+  <div style="background: #F7C2F2;" class="card-header" >
   </div>
   <div class="card-body" style="background: #AB72FC;">
     <h5 class="card-title"><h2 style="-webkit-text-stroke: 2px  black;color: #FCFF30; text-align: center;  font-size: 50px;"> ¡Separa tus Calcetines personalisados! </h2></h5>
@@ -53,28 +53,28 @@
 </div>
 
 <main>
-<div style="background: #7F8C8D ;" class="row row-cols-1 row-cols-md-3 g-4">
+<div style="background: #F7C2F2 ;" class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card">
       <img src="~/img/foto1.jpg" class="card-img-top" alt="media-talo">
-      <div class="card-body"style="background: #FCFF30;">
-        <h5 class="card-title" style="text-align: center; color: #000000;"><a href="#">Medias Taloneras</a></h5>
+      <div class="card-body"style="background: white;">
+        <h5 class="card-title" style="text-align: center; color: black; text-color:black;"><a href="#" style="color: black;">Medias Taloneras</a></h5>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
       <img src="~/img/foto2.jpg" class="card-img-top" alt="media-tobi">
-      <div class="card-body" style="background: #FCFF30;">
-        <h5 class="card-text" style="text-align: center; color:" ><a href="#">Medias Tobilleras</a></h5>
+      <div class="card-body" style="background: white;">
+        <h5 class="card-text" style="text-align: center; color:black" ><a href="#" style="color: black;">Medias Tobilleras</a></h5>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
       <img src="~/img/foto3.jpg" class="card-img-top" alt="media-larga">
-      <div class="card-body" style="background: #FCFF30;">
-        <h5 class="card-title" style="text-align: center;"><a  href="#">Medias sLargas</a></h5>
+      <div class="card-body" style="background: white;">
+        <h5 class="card-title" style="text-align: center;"><a  href="#" style="color: black;">Medias Largas</a></h5>
       </div>
     </div>
   </div>
@@ -82,7 +82,7 @@
  
 </main>
 
-<div style="background: #7F8C8D;" class="card text-center" >
+<div style="background: #F7C2F2;" class="card text-center" >
   <div class="card-header" >
   </div>
   <div class="card-body" style="background: #AB72FC;">
@@ -94,13 +94,13 @@
   </div>
 </div>
 
-<div style="background: #5DFFF2;" class="row g-0 bg-light position-relative">
-  <div style="background: #84FF6B;" class="col-md-6 mb-md-0 p-md-4">
+<div style="background:#F7C2F2;" class="row g-0 bg-light position-relative">
+  <div style="background: #F7C2F2;" class="col-md-6 mb-md-0 p-md-4">
     <img src="~/img/vendido.jpg" class="w-100" alt="...">
   </div>
-  <div style="background: #84FF6B;" class="col-md-6 p-4 ps-md-0" >
+  <div style="background: #F7C2F2;" class="col-md-6 p-4 ps-md-0" >
     <h5 class="mt-0 text-centerstyle="margin-top: 30%;" ></h5>
-    <p style="margin-top: 20%;"><b>CONTAMOS CON LA MEJOR CALIDAD PARA SER TUS CALCETINES FAVORITOS</b>
+    <p style="margin-top: 20%;"><b>¡CONTAMOS CON LA MEJOR CALIDAD PARA SER TUS CALCETINES FAVORITOS!</b>
       
     </p>
     
