--- a/PiesOla/Views/Shared/_Layout.cshtml
+++ b/PiesOla/Views/Shared/_Layout.cshtml
@@ -11,7 +11,9 @@
 <body>
     
     <header class="header">
-       <nav  class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3" style="background-color: #A2D2FF;">
+       <nav  class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3" style="background-image:url(/img/navcolor.jpg);background-size: cover;
+  background-repeat: no-repeat;
+  height: 100px; growth: 50px;">
             <div class="container" >
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img class="logo" src="~/Img/pies.jpeg" width="150px" alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
