--- a/PiesOla/Views/Nosotros/Index.cshtml
+++ b/PiesOla/Views/Nosotros/Index.cshtml
@@ -1,83 +1,94 @@
 @{
-    ViewData["Title"] = "Home Page";
+  ViewData["Title"] = "Home Page";
 }
- 
-   
- <body style="background-image:url(/img/fondop4.jpg); background-size: cover;
-  background-repeat: no-repeat;
-  margin: 0;
-  height: 100vh;">
-<div class="text-center" >
-   
-<div class="card text-center" >
-  <div class="card-header" >
-  </div>
-  <div class="card-body" style="background: #38D4F3 ;">
-    <h5 class="card-title"><h2 style="-webkit-text-stroke: 2px  black;color: #FDFEFE; text-align: center;  font-size: 50px;"> Nosotros </h2></h5>
-    <p class="card-text">
-    </p>
-  </div>
-  <div class="card-footer text-muted">
-  </div>
-</div>
 
-<main>
-<div class="row row-cols-1 row-cols-md-3 g-4">
-  <div class="col">
-   
+
+
+  <div class="text-center">
+
+    <div class="card text-center" >
+      <div class="card-header" >
+      </div>
+      <div class="card-body" style="background: #38D4F3 ;">
+        <h5 class="card-title">
+          <h2 style="-webkit-text-stroke: 2px  black;color: #FDFEFE; text-align: center;  font-size: 50px;"> Nosotros
+          </h2>
+        </h5>
+        <p class="card-text">
+        </p>
+      </div>
+      <div class="card-footer text-muted">
+      </div>
     </div>
-  </div>
-  <div class="col">
-   
-  </div>
-  <div class="col">
-    <div class="card">
-     </div>
-  </div>
-</div>
- </main>
 
-<div class="card text-center" >
-  <div class="card-header" >
+    <main>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+
+        </div>
+      </div>
+      <div class="col">
+
+      </div>
+      <div class="col">
+        <div class="card">
+        </div>
+      </div>
   </div>
+  </main>
+
+  <div class="card text-center">
+    <div class="card-header">
+    </div>
     <div class="card-body" style="background: #38D4F3 ;">
-    <h5 class="card-title"> Bienvenido a PiesOla <h2 style="-webkit-text-stroke: 2px  
-       
+      <h5 class="card-title"> Bienvenido a PiesOla <h2 style="-webkit-text-stroke: 2px;"></h2>
+          <div class=" card-footer text-muted">
+          </div>
+    </div>
+
+    <div class="row g-0 bg-light position-relative">
+      <div class="col-md-6 mb-md-0 p-md-4">
+        <img src="~/Img/rojas.jpg" class="w-70" alt="..." width="550px">
+      </div>
+      <div class="col-md-6 p-4 ps-md-0">
+        <h5 class="mt-0 text-centerstyle=" margin-top: 30%;""> </h5>
+
+        <p style="margin-top: 10%;">
+        <p style="color:#2E4053;">Somos una pequeña empresa con un sueño y fundamos "PiesOla" en Lima, Perú a inicios de
+          2016 con la visión y misión de darle color y diversión a las medias y que estas no sean solo un accesorio,
+          sino
+          que definan tu estilo y reflejen tu personalidad. </p>
+        <br>
+        <p style="color:#2E4053;">Comenzamos confeccionando medias taloneras en pocos diseños. Y actualmente, contamos
+          con
+          una gran variedad de diseños y tipos de medias: largas, tobilleras y taloneras que tienen como material
+          principal el algodón y poliéster deportivo de alta calidad.</p>
+        <br>
+        <p style="color:#2E4053;">En 2017 creamos nuestro prototipo de medias para sublimar: unas medias segmentadas con
+          la planta de full algodón afelpado, con elástico en el empeine y que en la parte del diseño tienen poliéster
+          deportivo de alta calidad con tejido enmallado que facilita la respiración y evita el deterioro por fricción
+          de
+          las medias.
+
+          Asimismo, como nos encanta darle color y diversión a las medias creamos la opción de personalizar tus medias
+          con
+          fotos, rostros e imágenes según lo que desees..</p>
+        <br>
+
+        <h2 class="card-title"
+          style="-webkit-text-stroke: 1px  black;color: #38D4F3; text-align: center;  font-size: 30px;">
+          ¡Bienvenido a PiesOla!</h2>
+
+
+        </p>
+        <a href="#" class="stretched-link " style="margin-left: 50%;"><span
+            style="text-align: center; margin-top: 20%;"></span> </a>
+
+      </div>
+
+    </div>
+
   </div>
-  <div class="card-footer text-muted">
+
   </div>
-</div>
 
-<div class="row g-0 bg-light position-relative">
-  <div class="col-md-6 mb-md-0 p-md-4">
-    <img src="~/Img/rojas.jpg" class="w-70" alt="..." width="550px">
-  </div>
-  <div class="col-md-6 p-4 ps-md-0" >
-     <h5 class="mt-0 text-centerstyle="margin-top: 30%;"" > </h5>
-    
-    <p style="margin-top: 10%;">
-<p style="color:#2E4053;">Somos una pequeña empresa con un sueño y fundamos "PiesOla" en Lima, Perú a inicios de 2016 con la visión y misión de darle color y diversión a las medias y que estas no sean solo un accesorio, sino que definan tu estilo y reflejen tu personalidad. </p>
-<br>
-<p style="color:#2E4053;">Comenzamos confeccionando medias taloneras en pocos diseños. Y actualmente, contamos con una gran variedad de diseños y tipos de medias: largas, tobilleras y taloneras que tienen como material principal el algodón y poliéster deportivo de alta calidad.</p>
-<br>
-<p style="color:#2E4053;">En 2017 creamos nuestro prototipo de medias para sublimar: unas medias segmentadas con la planta de full algodón afelpado, con elástico en el empeine y que en la parte del diseño tienen poliéster deportivo de alta calidad con tejido enmallado que facilita la respiración y evita el deterioro por fricción de las medias.
-
-Asimismo, como nos encanta darle color y diversión a las medias creamos la opción de personalizar tus medias con fotos, rostros e imágenes según lo que desees..</p>
-<br>
-
-<h2 class="card-title"
-      style="-webkit-text-stroke: 1px  black;color: #38D4F3; text-align: center;  font-size: 30px;"> 
-     ¡Bienvenido a PiesOla!</h2>
-
-    </p>
-    <a href="#" class="stretched-link " style="margin-left: 50%;"><span style="text-align: center; margin-top: 20%;"></span> </a>
-  </div>
-</div>
-<<<<<<< HEAD
-</div>
-=======
-</div>
-
-
->>>>>>> a13f68ba5891bcf30654fb12038a656680440b83
- </body>
