--- a/PiesOla/Views/Proceso/Index.cshtml
+++ b/PiesOla/Views/Proceso/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="card text-center" >
   <div class="card-header" >
   </div>
-  <div class="card-body" style="background: #A2D2FF ;">
+  <div class="card-body" style="background-image:url(/img/navcolor.jpg);">
     <h5 class="card-title"><h2 style="-webkit-text-stroke: 2px  black;color: #FDFEFE; text-align: center;  font-size: 50px;"> Proceso de Pago </h2></h5>
     <p class="card-text">
     </p>
