--- a/PiesOla/Views/Contactanos/Create.cshtml
+++ b/PiesOla/Views/Contactanos/Create.cshtml
@@ -6,7 +6,7 @@
 
 <link rel="stylesheet" href="~/css/estilos.css" />
 
-<body style="background-color: #7F8C8D ;">
+<body style="background-color: #F7C2F2 ;">
 <div class="row"    >
   
    <h1 style="text-align: center;">Envianos Un Mensaje</h1>
