--- a/PiesOla/Views/Shared/_Layout.cshtml
+++ b/PiesOla/Views/Shared/_Layout.cshtml
@@ -11,10 +11,10 @@
 <body>
     
     <header class="header">
-       <nav  class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3" style="background-image:url(/img/navcolor.jpg);background-size: cover;
+       <nav  class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3" style="background-color:white;background-size: cover;
   background-repeat: no-repeat;
   height: 100px; growth: 50px;">
-            <div class="container" >
+            <div class="container" style="background-color: white;" >
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img class="logo" src="~/Img/pies.jpeg" width="150px" alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
