--- a/PiesOla/Views/Producto/Index.cshtml
+++ b/PiesOla/Views/Producto/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-
+<body style="background-color:#F7C2F2 ;">
 <section id="catalogue" class="catalogue section-bg" style="text-align: center;">
 <div class="section-title">
           <h2 >Registro de Prendas</h2>
@@ -68,4 +68,4 @@
 </div>
 
 </section>
-
+</body>
