--- a/PiesOla/Views/Producto/Listar.cshtml
+++ b/PiesOla/Views/Producto/Listar.cshtml
@@ -5,8 +5,7 @@
 
  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
-<br>
-<br>
+<body style="background-color: #F7C2F2;">
 <div class="section-title" style="text-align: center;">
           <h2 >Prendas Registrados</h2>
           <p>Visualiza todos las Prendas registrados de nuestra almacen</p>
@@ -110,4 +109,5 @@
             )
         }
    </script> 
+   </body>
 
