--- a/PiesOla/Views/Catalogo/Info.cshtml
+++ b/PiesOla/Views/Catalogo/Info.cshtml
@@ -4,14 +4,15 @@
 }
 <br>
 <br>
+<body style="background-color: #F7C2F2;">
 <div class="container">
-    <div class="card" style="border: none;">
+    <div class="card" style="border: none;background-color: #F7C2F2; ">
         <div class="row">
             <div class="col-md-4">
                 <div class="card mb-4">
                     <a asp-area="" asp-controller="Home" asp-action="Info">
                     <img class="card-img-top" 
-                    style="height: 500px; width: 100%; " src="@Model.imagen">
+                    style="height: 300px; width: 100%; " src="@Model.imagen">
                     </a>
                 </div>
             </div>
@@ -20,42 +21,42 @@
                 <hr>
                 <ul class="list-unstyled">
                     <li>
-                        <p class="colorForm">DESCRIPCIÓN: @Model.Descripcion</p>
+                        <p class="colorForm">Descripción: @Model.Descripcion</p>
                         <hr>
                     </li>
                     <li>
+                        <p Class="colorForm">Material: @Model.Material</p>
+                    </li>
+                    <li>
                         <p Class="colorForm">Marca: @Model.Marca</p>
-                       
                     </li>
                 </ul>
             </div>
             <div class="col-md-4">
-                <h4 style="text-align: center;" class="colorForm">PRECIO</h4>
+                <h4 style="text-align: center;" class="colorForm">Precio:</h4>
                 <hr>
                 <ul class="list-unstyled" style="text-align: center;">
                     <li class="colorForm">@Model.Precio</li>
                     <hr><a asp-controller="Catalogo" asp-action="Index">
-                    <button class="btn btn-info">regresar</button></a>
+                    <button class="btn btn-info">Regresar</button></a>
                 </ul>
             </div>
         </div>
     </div>
     
     <div class="container">
-        <hr>
-        <h3>Mas estilos </h3>
-        <hr>
+      
           <div class="carrusel">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="https://www.abnormalshop.com/wp-content/uploads/2021/07/medias-largas-marcaras-fondo-verde-chica-mascaras-abnormal.jpg" alt="First slide" width="500" height="500">
+          <img class="d-block w-100" src="https://www.abnormalshop.com/wp-content/uploads/2020/07/web-24-horas-nuevo-gif.gif" alt="First slide" width="500" height="500">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="https://www.abnormalshop.com/wp-content/uploads/2021/08/accesos-web-341x200-medias-taloneras-1.jpg" alt="Second slide"width="500" height="500">
+          <img class="d-block w-100" src="https://www.abnormalshop.com/wp-content/uploads/2020/07/web-24-horas-nuevo-gif.gif" alt="Second slide"width="500" height="500">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="http://s3.amazonaws.com/imagenes-sellers-mercado-ripley/2020/09/08132855/80929_D03_1.jpg" alt="Third slide"width="500" height="500">
+          <img class="d-block w-100" src="https://www.abnormalshop.com/wp-content/uploads/2020/07/web-24-horas-nuevo-gif.gif" alt="Third slide"width="500" height="500">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -69,3 +70,4 @@
     </div>
   </div>
 </div>
+</body>
