--- a/PiesOla/Views/Contactanos/Index.cshtml
+++ b/PiesOla/Views/Contactanos/Index.cshtml
@@ -1,10 +1,8 @@
 @model IEnumerable<PiesOla.Models.Contactanos>
 
-<h2>Lista de Usuarios registrados en Contáctanos</h2>
+<body style="background-color: #F7C2F2;">
+<h2>Usuarios registrados en Contáctanos</h2>
 
-<p>
-    <a asp-action="Create">Crear</a>
-</p>
 <table class="table table-hover">
      <thead class="thead-dark">
         <tr>
@@ -53,3 +51,4 @@
 </table>
 
 <h1>@ViewData["Message"]</h1>
+</body>
