--- a/PiesOla/Views/Catalogo/Index.cshtml
+++ b/PiesOla/Views/Catalogo/Index.cshtml
@@ -3,10 +3,11 @@
     ViewData["Title"] = "Catalogo";
 	
 }
+<body style="background-color:#F7C2F2 ;">
 <section id="catalogue" class="catalogue section-bg" style="background-color: white;" >
-      <div class="container">
+      <div class="container" style="background-color: #F7C2F2;">
 
-        <div class="section-title">
+        <div class="section-title" style="background-color: #F7C2F2;">
           <h2 data-aos="fade-in">Nuestras Medias</h2>
           <p data-aos="fade-in">Las mejores medias</p>
         </div>
@@ -19,16 +20,16 @@
 
 
 	{
-		<div class="col-lg-4 catalogue-item filter-app">
+		<div class="col-lg-4 catalogue-item filter-app" style="text-decoration-color:white; background-color:#F7C2F2;">
             <div style="text-align:center; text-color:white;" >
         		<img src="@item.imagen" class="card-img-top" alt="..." style=" height: 300px; text-color:white;">
             </div>
-			<div class="catalogo" style="height: 250px;  text-color:white;">
-				<div style="text-align:center; color:black;  text-color:white;" class="card-body" >
+			<div class="catalogo" style="height: 250px;  text-color:white; background-color:#F7C2F2;">
+				<div style="text-align:center; color:black;  text-color:white; background-color:#F7C2F2;" class="card-body" >
 					<h5 class="card-title" style="text-color:#38D4F3;">@Html.DisplayFor(modelItem => item.Descripcion)</h5>
 						<p class="card-text">@Html.DisplayFor(modelItem => item.Material)</p>
-				<div style="margin-top: 30px; background-color:white;  text-color:white;">
-						<p style="text-align: center; text-color:white;"><a class="btn btn-info" disabled> S/ @Html.DisplayFor(modelItem => item.Precio)</a></p>
+				<div style="margin-top: 30px; text-color:white;background-color:#F7C2F2;">
+						<p style="text-align: center; text-color:white; background-color:#F7C2F2;"><a class="btn btn-info" disabled> S/ @Html.DisplayFor(modelItem => item.Precio)</a></p>
 						<div class="col" style="text-align: center; text-color:white;">
               <a asp-action="Add" asp-route-id="@item.ID" class="btn btn-info"> Agregar</a>
               <a asp-action="Info" asp-route-id="@item.ID" class="btn btn-info"> Descripcion</a>
@@ -41,5 +42,5 @@
 
 
     </section>
-
+</body>
 
