--- a/PiesOla/Views/Nosotros/Index.cshtml
+++ b/PiesOla/Views/Nosotros/Index.cshtml
@@ -1,7 +1,7 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-
+<body style="background-color:#F7C2F2;">
 <div class="text-center" >
    
 <div class="card text-center" style="background-color:white;" >
@@ -17,22 +17,23 @@
 
  </main>
 
-<div class="card text-center" >
+<div class="card text-center" style="background-color:#F7C2F2;" >
   <div class="card-header" >
   </div>
     <div class="card-body" style="background: #38D4F3 ;">
     <h5 class="card-title"> Bienvenido a PiesOla <h2 style="-webkit-text-stroke: 2px  
        
   </div>
+  
   <div class="card-footer text-muted" >
   </div>
 </div>
 
-<div class="row g-0 bg-light position-relative">
-  <div class="col-md-6 mb-md-0 p-md-4">
+<div class="row g-0 bg-light position-relative"style="background-color:#F7C2F2;" >
+  <div class="col-md-6 mb-md-0 p-md-4" style="background-color:#F7C2F2;">
     <img src="~/Img/rojas.jpg" class="w-70" alt="..." width="550px">
   </div>
-  <div class="col-md-6 p-4 ps-md-0" >
+  <div class="col-md-6 p-4 ps-md-4" style="background-color:#F7C2F2;" >
      <h5 class="mt-0 text-centerstyle="margin-top: 30%;"" > </h5>
     
     <p style="margin-top: 10%;">
@@ -54,3 +55,4 @@ Asimismo, como nos encanta darle color y diversión a las medias creamos la opci
   </div>
 </div>
 </div>
+</body>
