--- a/PiesOla/Views/Contactanos/Create.cshtml
+++ b/PiesOla/Views/Contactanos/Create.cshtml
@@ -15,21 +15,21 @@
   <div class="col-md-6">
 <form asp-controller="Contactanos" asp-action="Create">
      <div class="form-group" style="text-align: left;">
-                <label asp-for="Nombre" class="control-label"></label>
+                <label asp-for="Nombre" class="control-label">Nombre:</label>
                 <input asp-for="Nombre" class="form-control" type="text" required/>
             </div>    
                  <div class="form-group" style="text-align: left;">
-                <label asp-for="Email" class="control-label"></label>
+                <label asp-for="Email" class="control-label">Email:</label>
                 <input asp-for="Email" class="form-control" type="email" required />
             </div>         
            
               <div class="form-group" style="text-align: left;">
-                <label asp-for="Asunto" class="control-label"></label>
+                <label asp-for="Asunto" class="control-label">Asunto:</label>
                 <input asp-for="Asunto" class="form-control"  type="text" required/>
             </div>  
             
             <div  class="mb-3" style="text-align: left;" >
-                <label asp-for="Mensaje" class="control-label" ></label>
+                <label asp-for="Mensaje" class="control-label" >Mensaje:</label>
                 <textarea asp-for="Mensaje"  class="form-control "></textarea>
             </div>   
                    
