--- a/PiesOla/Views/Proceso/Index.cshtml
+++ b/PiesOla/Views/Proceso/Index.cshtml
@@ -2,20 +2,17 @@
     ViewData["Title"] = "Home Page";
 }
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-
+<body style="background-color: #F7C2F2;">
 <div class="card text-center" >
-  <div class="card-header" >
-  </div>
-  <div class="card-body" style="background-image:url(/img/navcolor.jpg);">
+  
+  <div class="card-body" style="background-color:#38D4F3;">
     <h5 class="card-title"><h2 style="-webkit-text-stroke: 2px  black;color: #FDFEFE; text-align: center;  font-size: 50px;"> Proceso de Pago </h2></h5>
-    <p class="card-text">
-    </p>
+    
   </div>
-  <div class="card-footer text-muted">
-  </div>
+  
 </div>
 <main>
-    <div><h3 style="margin-top: 5%;">Ingrese sus Datos</h3></div>
+    <div><h4 style="margin-top: 5%;">Ingrese todos sus Datos</h4></div>
         <div class="container">
             <div class="row mt-3">
                 <div class="col">
@@ -61,7 +58,7 @@
   </div>
 </div>
         <hr class="mb-4">
-        <label class="mb-3 colorForm" >Payment</label>
+        <label class="mb-3 colorForm" >Tipo de Tarjeta:</label>
 
         <div class="d-block my-3 formM">
           <div class="custom-control custom-radio">
@@ -91,7 +88,7 @@
         </div>
         <div class="row">
           <div class="col-md-6 mb-3 formM">
-            <label for="cc-expiration" class="colorForm">Fecha de Expiración</label>
+            <label for="cc-expiration" class="colorForm">Fecha de Expiración:</label>
             <input type="text" class="form-control" id="cc-expiration" placeholder="Fecha de expiración es requerida" required="" style="border-width: 2px; border-color: #030303 ;">
             <div class="invalid-feedback">
             Fecha de expiración es requerida
@@ -111,11 +108,11 @@
 
                         <div class="row justify-content-around" style=" margin-left:-5%;" >
                             <div class="col-xs-12 col-md-4" >
-                                <a href="~/Catalogo" class="btn btn-outline-info" style="width:300px;">Seguir comprando</a>
+                                <a href="~/Catalogo" class="btn btn-outline-info" style="width:300px; background-color:white;color:black;">Seguir comprando</a>
                             </div>
                             <div class="col-xs-12 col-md-4">
                                 
-                                <button id="btn1" class="btn btn-outline-info btn1" style="border-radius: 4px; width:300px;"onclick="Swal.fire({
+                                <button id="btn1" class="btn btn-outline-info btn1" style="border-radius: 4px; width:300px; background-color:white;color:black;"onclick="Swal.fire({
       position: 'center',
       icon: 'success',
       title: 'la compra se realizo con exito ',
@@ -136,4 +133,5 @@
 
         </div>
     </main>
+</body>
   
