--- a/PiesOla/Views/Proforma/Edit.cshtml
+++ b/PiesOla/Views/Proforma/Edit.cshtml
@@ -3,10 +3,10 @@
 @{
     ViewData["Title"] = "Edit";
 }
+<body style="background-color: #F7C2F2;">
+<h1>Modificar Cantidad</h1>
 
-<h1>Edit</h1>
 
-<h4>Proforma</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -16,20 +16,21 @@
             <input type="hidden" asp-for="UserID" />
             <input type="hidden" asp-for="Precio" />
             <div class="form-group">
-                <label asp-for="Stock" class="control-label"></label>
+                <label asp-for="Stock" class="control-label">Cantidad:</label>
                 <input asp-for="Stock" class="form-control" />
                 <span asp-validation-for="Stock" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group " style="">
+                <input type="submit" style="background-color: white; color:black" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Regresar</a>
+<div style="color:black;">
+    <a asp-action="Index" >Regresar</a>
 </div>
+</body>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
