--- a/PiesOla/Views/Proforma/Index.cshtml
+++ b/PiesOla/Views/Proforma/Index.cshtml
@@ -3,17 +3,16 @@
 @{
     ViewData["Title"] = "Index";
 }
+<body style="background-color:#F7C2F2;">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 <div class="card text-center" >
-  <div class="card-header" >
+  <div class="card-header" style="background-color:#F7C2F2 ;" >
   </div>
-  <div class="card-body" style="background: #A2D2FF ;">
+  <div class="card-body" style="background: #A2D2FF ; color:black;">
     <h5 class="card-title"><h2 style="-webkit-text-stroke: 2px  black;color: #FDFEFE; text-align: center;  font-size: 50px;"> Carrito</h2></h5>
-    <p class="card-text">
-    </p>
+    
   </div>
-  <div class="card-footer text-muted">
-  </div>
+  
 </div>
 
 
@@ -51,8 +50,8 @@
             </td>
             <td>
                
-                <a asp-action="Edit" class="btn btn-info"  style="background: #A2D2FF"  asp-route-id="@item.Id">Editar</a>
-                <a asp-action="Delete" class="btn btn-info"   style="background: #A2D2FF" asp-route-id="@item.Id">Borrar</a>
+                <a asp-action="Edit" class="btn btn-info"  style="background:white; text-color:black; color:black;"  asp-route-id="@item.Id">Editar</a>
+                <a asp-action="Delete" class="btn btn-info"   style="background:white; color:black;" asp-route-id="@item.Id">Borrar</a>
 
             </td>
         </tr>
@@ -87,8 +86,8 @@
                                 <hr />
                                 <tr>
                                    
-                               <span class="d-inline-block" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-content="Disabled popover" style=" margin-left:35%;">  
-                                    <button class="btn btn-info" type="button" disabled >Total : S/. @total</button>
+                               <span class="d-inline-block" tabindex="0" data-bs-toggle="popover"  data-bs-content="Disabled popover" style=" margin-left:35%;">  
+                                    <button class="btn btn-info" type="button" style="background:white; color:black;" disabled >Total : S/. @total</button>
                                 </span>
                                 </tr>
 
@@ -96,11 +95,11 @@
                         </div>
                         <div class="row justify-content-around" style=" margin-left:15%;" >
                             <div class="col-xs-12 col-md-4" >
-                                <a href="~/Catalogo" class="btn btn-outline-info" style="width:250px;">Seguir comprando</a>
+                                <a href="~/Catalogo" class="btn btn-outline-info" style="width:250px; background:white; color:black;">Seguir comprando</a>
                             </div>
                             <div class="col-xs-12 col-md-4">
                                 
-                               <a href="~/Proceso" class="btn btn-outline-info" style="width:250px;">Realizar Compra</a>
+                               <a href="~/Proceso" class="btn btn-outline-info" style="width:250px; background:white; color:black;">Realizar Compra</a>
                             </div>
                         </div>
                         
@@ -158,3 +157,4 @@ title:'bie'
             )
         }
    </script> 
+</body>
