--- a/Views/Nosotros/Index.cshtml
+++ b/Views/Nosotros/Index.cshtml
@@ -31,7 +31,7 @@
 
 <div class="row g-0 bg-light position-relative"style="background-color:#F7C2F2;" >
   <div class="col-md-6 mb-md-0 p-md-4" style="background-color:#F7C2F2;">
-    <img src="~/Img/rojas.jpg" class="w-70" alt="..." width="550px">
+    <img src="~/img/rojas.jpg" class="w-70" alt="..." width="550px">
   </div>
   <div class="col-md-6 p-4 ps-md-4" style="background-color:#F7C2F2;" >
      <h5 class="mt-0 text-centerstyle="margin-top: 30%;"" > </h5>
